Fix failing test cases, slim down Dockerfile, and various other improvements.