@@ -1,18 +1,23 @@
 package com.example.demo.service;
 
 import com.example.demo.model.Category;
+import com.example.demo.model.request.CreateCategoriesRequest;
 import com.example.demo.repository.CategoryRepository;
-import com.example.demo.repository.ThreadRepository;
 import jakarta.annotation.PostConstruct;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.PersistenceContext;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.repository.query.Param;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
-import java.util.regex.Pattern;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -23,9 +28,9 @@ public class CategoryService {
     private String adminApiKey;
 
     private final CategoryRepository categoryRepository;
-    private final ThreadRepository threadRepository;
+    private final JwtService jwtService;
 
-    private static final Pattern CATEGORY_NAME_PATTERN = Pattern.compile("^[a-zA-Z0-9\\s]{3,50}$");
+    private final EntityManager entityManager;
 
     @PostConstruct
     public void init() {
@@ -36,48 +41,56 @@ public class CategoryService {
         }
     }
 
-    public ResponseEntity<Void> createCategories(String token, Map<String, List<String>> requestBody) {
+    @Transactional
+    public ResponseEntity<String> createCategories(String token, CreateCategoriesRequest request) {
         if (!token.equals(adminApiKey)) {
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
         }
 
-        List<String> categories = requestBody.get("categories");
-
-        if (categories == null || categories.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).build();
+        Set<String> categories = new HashSet<>(request.getCategories());
+        if (categories.size() != request.getCategories().size()) {
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Duplicate categories in the payload");
         }
 
+        if (categoryRepository.existsAnyByNameIn(categories)) {
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("One or more category names already exist");
+        }
+
+        List<Category> currentBatch = new ArrayList<>();
+        int batchSize = 20; // Adjust batch size as needed
+
         for (String name : categories) {
-            if (!isValidCategoryName(name)) {
-                return ResponseEntity.status(HttpStatus.BAD_REQUEST).build();
-            }
-
-            if (categoryRepository.existsByName(name)) {
-                return ResponseEntity.status(HttpStatus.BAD_REQUEST).build();
-            }
-
             Category category = new Category();
             category.setName(name);
+            currentBatch.add(category);
 
-            categoryRepository.save(category);
+            if (currentBatch.size() == batchSize) {
+                categoryRepository.saveAll(currentBatch);
+                entityManager.flush();
+                entityManager.clear();
+                currentBatch.clear();
+            }
+        }
+
+        // Save any remaining categories in the batch
+        if (!currentBatch.isEmpty()) {
+            categoryRepository.saveAll(currentBatch);
+            entityManager.flush();
+            entityManager.clear();
         }
 
         return ResponseEntity.status(HttpStatus.CREATED).build();
     }
 
-    private boolean isValidCategoryName(String name) {
-        return CATEGORY_NAME_PATTERN.matcher(name).matches();
-    }
-
     public ResponseEntity<List<String>> listCategories(String sessionCookie) {
-        if (sessionCookie == null || !sessionCookie.contains("session=")) {
+        if (!jwtService.isSessionValid(sessionCookie)) {
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
         }
 
         List<String> categories = categoryRepository.findAll()
                 .stream()
                 .map(Category::getName)
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity.ok(categories);
     }
@@ -92,8 +105,11 @@ public class CategoryService {
                     .body("Cannot delete the Default category");
         }
 
-        Category category = categoryRepository.findByName(categoryName)
-                .orElseThrow(() -> new IllegalArgumentException("Category not found"));
+        Category category = categoryRepository.findByName(categoryName).orElse(null);
+        if (category == null) {
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                    .body(String.format("Category not found: \"%s\"", categoryName));
+        }
 
         categoryRepository.delete(category);
 
